--- a/view/css/register.css
+++ b/view/css/register.css
@@ -43,6 +43,7 @@ body {
 
 main {
 	display: flex;
+	flex-direction: column;
 	width: 100%;
 	height: 100vh;
 	justify-content: center;
@@ -55,8 +56,8 @@ form {
 	flex-direction: column;
 	justify-content: center;
 	border: none;
-	max-width: 450px;
-	max-height: 75vh;
+	max-width: 525px;
+	max-height: 85vh;
 	background: var(--white);
 	width: 100%;
 	height: 100%;
@@ -65,64 +66,80 @@ form {
 
 form h1 {
 	text-align: center;
-	font-size: 42px;
+	font-size: 36px;
+	margin: 16px 0;
 }
 
 form label{
-	margin:0 25px;
-	font-size: 21px;
+	margin:0 20px;
+	font-size: 18px;
 }
 
 form input[type="text"],
-form input[type="password"] {
-	margin: 8px 0;
+form input[type="password"],
+form input[type="email"] {
 	width: 100%;
-	height: 32px;
+	height: 24px;
 	border: 1px solid var(--green);
 	border-radius: 12px;
 	outline: none;
 }
 
-.login-btn {
+
+.gender {
+	margin-bottom: -8px;
+}
+
+form div label{
+	font-size: 16px;
+	margin: 0 20px;
+}
+
+.back-btn {
+	display: inline-block;
+	text-align: center;
+	line-height: 40px;
+	text-decoration: none;
 	margin: 0 5%;
-	width: 90%;
+	width: 40%;
 	height: 40px;
-	background: var(--green);
-	color: var(--white);
+	background: var(--white);
+	color: var(--green);
 	border-radius: 21px;
 	font-size: 18px;
-	border: none;
+	border: 1px solid var(--green);
 	font-weight: 700;
 	transition: background .4s ease-out, color .4s ease-out, border .4s ease-out;
 }
 
-.login-btn:hover {
+.back-btn:hover {
 	cursor: pointer;
-	background: var(--white);
-	color: var(--green);
-	border: 3px solid var(--green);
+	background: var(--green);
+	color: var(--white);
+	border: 1px solid var(--white);
 	transition: background .4s ease-out, color .4s ease-out, border .4s ease-out;
 }
 
 .register-btn {
-	display: inline-block;
-	text-align: center;
-	line-height: 40px;
 	margin: 0 5%;
-	width: 90%;
+	width: 60%;
 	height: 40px;
-	background: var(--white);
-	color: var(--orange);
-	text-decoration: none;
+	background: var(--orange);
+	color: var(--white);
 	border-radius: 21px;
 	font-size: 18px;
 	border: 1px solid var(--orange);
 	font-weight: 700;
-	transition: background .4s ease-out, color .4s ease-out;
+	transition: background .4s ease-out, color .4s ease-out, border .4s ease-out;
 }
 
 .register-btn:hover {
-	background: var(--orange);
-	color: var(--white);
-	transition: background .4s ease-out, color .4s ease-out;
+	background: var(--white);
+	color: var(--orange);
+	border: 1px solid var(--orange);
+	transition: background .4s ease-out, color .4s ease-out, border .4s ease-out;
+}
+
+.flex {
+	display: flex;
 }
