--- a/view/css/login.css
+++ b/view/css/login.css
@@ -76,11 +76,12 @@ form label{
 form input[type="text"],
 form input[type="password"] {
 	margin: 8px 0;
-	width: 100%;
+	width: 97%;
 	height: 32px;
 	border: 1px solid var(--green);
 	border-radius: 12px;
 	outline: none;
+	padding-left: 10px;
 }
 
 .login-btn {
