--- a/view/css/register.css
+++ b/view/css/register.css
@@ -78,11 +78,12 @@ form label{
 form input[type="text"],
 form input[type="password"],
 form input[type="email"] {
-	width: 100%;
-	height: 24px;
+	width: 97%;
+	height: 32px;
 	border: 1px solid var(--green);
 	border-radius: 12px;
 	outline: none;
+	padding-left: 10px;
 }
 
 
