--- a/view/css/register.css
+++ b/view/css/register.css
@@ -102,28 +102,28 @@ form div label{
 	line-height: 40px;
 	text-decoration: none;
 	margin: 0 5%;
-	width: 40%;
+	width: 100%;
 	height: 40px;
 	background: var(--white);
-	color: var(--green);
+	color: #F00;
 	border-radius: 21px;
 	font-size: 18px;
-	border: 1px solid var(--green);
+	border: 1px solid #F00;
 	font-weight: 700;
 	transition: background .4s ease-out, color .4s ease-out, border .4s ease-out;
 }
 
 .back-btn:hover {
 	cursor: pointer;
-	background: var(--green);
+	background: #F00;
 	color: var(--white);
-	border: 1px solid var(--white);
+	border: 1px solid #F00;
 	transition: background .4s ease-out, color .4s ease-out, border .4s ease-out;
 }
 
 .register-btn {
 	margin: 0 5%;
-	width: 60%;
+	width: 100%;
 	height: 40px;
 	background: var(--orange);
 	color: var(--white);
@@ -131,6 +131,7 @@ form div label{
 	font-size: 18px;
 	border: 1px solid var(--orange);
 	font-weight: 700;
+	outline: none;
 	transition: background .4s ease-out, color .4s ease-out, border .4s ease-out;
 }
 
