--- a/view/css/admin.css
+++ b/view/css/admin.css
@@ -19,7 +19,7 @@ body {
 	text-align: center;
 	line-height: 40px;
 	margin: 18px 5% 0;
-	width: 90%;
+	width: 50%;
 	height: 40px;
 	background: var(--white);
 	color: #F00;
@@ -35,4 +35,48 @@ body {
 	background: #F00;
 	color: var(--white);
 	transition: background .4s ease-out, color .4s ease-out;
+}
+
+main {
+	display: flex;
+	width: 100%;
+	height: 100vh;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+table {
+	max-width: 1200px;
+	width: 100%;
+	text-align: center;
+	background: #FFF;
+	border-spacing: 0;
+}
+
+
+thead {
+	background: var(--green);
+	color: var(--white);
+}
+
+tbody tr:nth-child(even) {
+	background: #7DDB7D;
+}
+
+th, td {
+	padding: 15px;
+}
+
+td a {
+	text-decoration: none;
+	font-size: 18px	;
+}
+
+a.update-link {
+	color: var(--green);
+}
+
+a.delete-link {
+	color: #F00;	
 }
