--- a/view/css/dashboard.css
+++ b/view/css/dashboard.css
@@ -14,6 +14,21 @@ body {
 	font-family: "Roboto", sans-serif;
 }
 
+header > div {
+	display: flex;
+	justify-content: space-between;
+}
+
+header > div > div {
+	font-size: 18px;
+	display: flex;
+	align-items: center;
+	padding: 0 15px;
+	width: 400px;
+	color: #FFF;
+	background: var(--green);
+} 
+
 nav {
 	display: flex;
 	align-items: center;
@@ -49,4 +64,45 @@ a.logout-btn {
 a.logout-btn:hover {
 	transition: background .4s ease-out;
 	background: #CC0000;
+}
+
+main {
+	display: flex;
+	width: 100%;
+	height: 80vh;
+	align-items: center;
+	justify-content: center;
+}
+
+main a {
+	text-decoration: none;
+}
+
+.card {
+	box-shadow: 0 4px 8px 0 rgba(0,0,0,.4);	
+	height: 300px;
+	width: 250px;
+	transition: .3s;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	font-size: 28px;
+	background: var(--orange);
+	color: var(--white);
+	font-weight: 600;
+}
+
+.card:hover {
+	box-shadow: 0 8px 16px 0 rgba(0,0,0,.4);
+}
+
+.card-container {
+	padding: 2px 16px;
+}
+
+.card img {
+	max-width: 150px;
+	width: 100%;
+	display: block;
 }
