--- a/view/css/dashboard.css
+++ b/view/css/dashboard.css
@@ -14,33 +14,28 @@ body {
 	font-family: "Roboto", sans-serif;
 }
 
-header > div {
-	display: flex;
-	justify-content: space-between;
-}
-
-header > div > div {
-	font-size: 18px;
-	display: flex;
-	align-items: center;
-	padding: 0 15px;
-	width: 400px;
-	color: #FFF;
-	background: var(--green);
-} 
-
 nav {
 	display: flex;
 	align-items: center;
-	justify-content: flex-end;
+	justify-content: space-between;
 	top: 0;
 	width: 100%;
 	height: 4rem;
 	background: var(--green);
 }
 
+nav > div {
+	font-size: 18px;
+	display: flex;
+	align-items: center;
+	padding: 0 15px;	
+	color: #FFF;
+	background: var(--green);
+}
+
 nav ul {
 	list-style: none;
+	display: flex;
 }
 
 nav ul li a {
@@ -84,6 +79,7 @@ main a {
 	width: 250px;
 	transition: .3s;
 	display: flex;
+	margin: 0 25px;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
