--- a/view/css/update_admin.css
+++ b/view/css/update_admin.css
@@ -57,7 +57,7 @@ form input[type="email"] {
 	padding-left: 10px;
 }
 
-.exit-btn {
+.delete-btn {
 	display: inline-block;
 	text-align: center;
 	line-height: 40px;
@@ -75,7 +75,7 @@ form input[type="email"] {
 	transition: background .4s ease-out, color .4s ease-out, border .4s ease-out;
 }
 
-.exit-btn:hover {
+.delete-btn:hover {
 	cursor: pointer;
 	background: #F00;
 	color: var(--white);
@@ -88,11 +88,11 @@ form input[type="email"] {
 	margin: 0 3.5%;
 	width: 100%;
 	height: 40px;
-	background: var(--green);
+	background: var(--orange);
 	color: var(--white);
 	border-radius: 21px;
 	font-size: 18px;
-	border: 1px solid var(--green);
+	border: 1px solid var(--orange);
 	font-weight: 700;
 	outline: none;
 	transition: background .4s ease-out, color .4s ease-out, border .4s ease-out;
@@ -100,8 +100,34 @@ form input[type="email"] {
 
 .update-btn:hover {
 	background: var(--white);
-	color: var(--green);
+	color: var(--orange);
 	cursor: pointer;
+	border: 1px solid var(--orange);
+	transition: background .4s ease-out, color .4s ease-out, border .4s ease-out;
+}
+
+.exit-btn {
+	display: inline-block;
+	text-align: center;
+	line-height: 40px;
+	margin: 0 3.5%;
+	text-decoration: none;
+	max-width: 482.5px;
+	width: 100%;
+	height: 40px;
+	background: var(--white);
+	color: var(--green);
+	border-radius: 21px;
+	font-size: 18px;
+	border: 1px solid var(--green);
+	font-weight: 700;
+	transition: background .4s ease-out, color .4s ease-out, border .4s ease-out;
+}
+
+.exit-btn:hover {
+	cursor: pointer;
+	background: var(--green);
+	color: var(--white);
 	border: 1px solid var(--green);
 	transition: background .4s ease-out, color .4s ease-out, border .4s ease-out;
 }
