--- a/view/css/admin.css
+++ b/view/css/admin.css
@@ -2,6 +2,7 @@
 	--green: #008000;
 	--white: #FFF;
 	--orange: #FFA500;
+	--red: #F00;
 }
 
 * {
@@ -22,17 +23,17 @@ body {
 	width: 50%;
 	height: 40px;
 	background: var(--white);
-	color: #F00;
+	color: var(--red);
 	text-decoration: none;
 	border-radius: 21px;
 	font-size: 18px;
-	border: 1px solid #F00;
+	border: 1px solid var(--red);
 	font-weight: 700;
 	transition: background .4s ease-out, color .4s ease-out;
 }
 
 .exit-btn:hover {
-	background: #F00;
+	background: var(--red);
 	color: var(--white);
 	transition: background .4s ease-out, color .4s ease-out;
 }
@@ -78,5 +79,5 @@ a.update-link {
 }
 
 a.delete-link {
-	color: #F00;	
+	color: var(--red);	
 }
