--- a/view/css/create_student.css
+++ b/view/css/create_student.css
@@ -2,6 +2,7 @@
 	--green: #008000;
 	--white: #FFF;
 	--orange: #FFA500;
+	--red: #F00;
 }
 
 * {
@@ -78,19 +79,19 @@ form div label{
 	width: 100%;
 	height: 40px;
 	background: var(--white);
-	color: #F00;
+	color: var(--red);
 	border-radius: 21px;
 	font-size: 18px;
-	border: 1px solid #F00;
+	border: 1px solid var(--red);
 	font-weight: 700;
 	transition: background .4s ease-out, color .4s ease-out, border .4s ease-out;
 }
 
 .back-btn:hover {
 	cursor: pointer;
-	background: #F00;
+	background: var(--red);
 	color: var(--white);
-	border: 1px solid #F00;
+	border: 1px solid var(--red);
 	transition: background .4s ease-out, color .4s ease-out, border .4s ease-out;
 }
 
