--- a/view/css/login.css
+++ b/view/css/login.css
@@ -2,6 +2,7 @@
 	--green: #008000;
 	--white: #FFF;
 	--orange: #FFA500;
+	--red: #F00;
 }
 
 * {
@@ -137,17 +138,17 @@ form input[type="password"] {
 	width: 90%;
 	height: 40px;
 	background: var(--white);
-	color: #F00;
+	color: var(--red);
 	text-decoration: none;
 	border-radius: 21px;
 	font-size: 18px;
-	border: 1px solid #F00;
+	border: 1px solid var(--red);
 	font-weight: 700;
 	transition: background .4s ease-out, color .4s ease-out;
 }
 
 .exit-btn:hover {
-	background: #F00;
+	background: var(--red);
 	color: var(--white);
 	transition: background .4s ease-out, color .4s ease-out;
 }
