--- a/view/css/remove_admin.css
+++ b/view/css/remove_admin.css
@@ -1,3 +1,10 @@
+:root {
+	--green: #008000;
+	--white: #FFF;
+	--orange: #FFA500;
+	--red: #F00;
+}
+
 * {
 	margin: 0;
 	padding: 0;
@@ -61,12 +68,12 @@ form input[type="email"] {
 	line-height: 32px;
 	width: 100%;
 	height: 32px;
-	background: #F00;
+	background: var(--red);
 	color: #FFF;
 	text-decoration: none;
 	border-radius: 21px;
 	font-size: 18px;
-	border: 1px solid #F00;
+	border: 1px solid var(--red);
 	font-weight: 700;
 	outline: none;	
 	transition: background .4s ease-out, color .4s ease-out;
@@ -74,8 +81,8 @@ form input[type="email"] {
 
 .delete-btn:hover {
 	background: #FFF;
-	color: #F00;
-	border: 1px solid #F00;
+	color: var(--red);
+	border: 1px solid var(--red);
 	transition: background .4s ease-out, color .4s ease-out;
 }
 
