--- a/view/css/student.css
+++ b/view/css/student.css
@@ -2,6 +2,7 @@
 	--green: #008000;
 	--white: #FFF;
 	--orange: #FFA500;
+	--red: #F00;
 }
 
 * {
@@ -55,7 +56,7 @@ a.update-link {
 }
 
 a.delete-link {
-	color: #F00;	
+	color: var(--red);	
 }
 
 .exit-btn {
@@ -66,17 +67,17 @@ a.delete-link {
 	width: 100%;
 	height: 40px;
 	background: var(--white);
-	color: #F00;
+	color: var(--red);
 	text-decoration: none;
 	border-radius: 21px;
 	font-size: 18px;
-	border: 1px solid #F00;
+	border: 1px solid var(--red);
 	font-weight: 700;
 	transition: background .4s ease-out, color .4s ease-out;
 }
 
 .exit-btn:hover {
-	background: #F00;
+	background: var(--red);
 	color: var(--white);
 	transition: background .4s ease-out, color .4s ease-out;
 }
